# third_party

./: .gitignore  README.md  build.bat  build.sh  config.cfg  test.sh
include/: easing.h  intx.hpp  miniz.c  miniz.h  sol_lua_operator.h  ttf_notosans.h
include/digest/: digestpp.hpp
include/misc/: qeglfskmsgbmscreen-5.15.2-modified.cpp  qkmsdevice-5.15.2-modified.cpp  qt_kms_interceptor.h
include/mr/: imgui_mr.h  logger.h  logger_el.h  sdl_runner.h
include/mrcommon/: filesystem.h  logger.h  sdl3_runner.h
include/sol/: config.hpp  forward.hpp  sol.hpp
include/ttf/: ttf_font_audio_icon.h  ttf_font_awesome_brands.h  ttf_font_awesome_regular.h  ttf_font_awesome_solid.h  ttf_fork_awesome_icon.h  ttf_kenney_icon.h  ttf_material_icon.h  ttf_notosans.h  ttf_notosans_sc_level_1.h  ttf_notosans_sc_level_1_2.h  ttf_notosans_sc_level_1s.h
scripts/: build_automake.sh.template  build_ffmpeg.sh  build_libs.sh.template  build_luajit.sh  build_x264.sh
scripts/cmake.toolchain/: aarch64.cmake.template  gnueabihf.cmake.template
sources/: CMakeLists.txt
sources/compressor/: miniz.c
sources/glad/include/glad/: egl.h  gl.h  gles1.h  gles2.h  glsc2.h  glx.h  vulkan.h  wgl.h
sources/glad/src/: gles2.c
sources/imgui_stb_bundle/: prebuild_bundle.cpp
sources/lua/: loslib.c  luaconf.h
sources/minizip/: CMakeLists.txt  minizip.c  mz.h  mz_crypt.c  mz_strm_lz4.c  mz_strm_lz4.h  mz_strm_zlib.c  mz_strm_zstd.c  mz_zip.c
sources/mp-common/: logger.cpp  logger.h
sources/mp3lame/: CMakeLists.txt
sources/mp3lame/Dll/: Makefile
sources/mr-common/: imgui_mr.cpp  imgui_mr.h  logger.cpp  miniz.c
sources/mrcommon/: filesystem.cpp  imgui_mr.cpp  logger.cpp  sdl_runner.cpp
sources/mrcommon/bundle/: prebuild_bundle.cpp
sources/mrcommon/include/: filesystem.h  imgui_mr.h  logger.h  sdl_runner.h
srcipts/: build_luajit.sh
